--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
 		"express": "^4.14.0",
-		"mongoose": "^4.7.2",
+		"mongoose": "^5.9.19",
 		"mongodb": "^2.2.14",
 		"body-parser": "^1.15.2",
 		"cors": "^2.8.1",
@@ -25,5 +26,8 @@
 		"node",
 		"gomix",
 		"express"
-	]
+	],
+	"devDependencies": {
+		"nodemon": "^2.0.4"
+	}
 }
